--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<!-- Encabezado, aquí se agregan todos los scripts
-     y stylesheets de la página-->
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Speed Racer</title>
     <!-- Lib -->
     <script src="./lib/p5.min.js"></script>
-    <!-- p5.dom nos ayudara a crear el formulario-->
     <script src="./lib/p5.dom.min.js"></script>
     <script src="./lib/p5.sound.min.js"></script>
     <script src="./lib/p5.play.js"></script>
 
-    <!-- Sweet Alert-->
+    <!-- Sweet Alert c40-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -24,24 +21,28 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
+      <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-database.js"></script>
 
-    <script>
-      const firebaseConfig = {
-      apiKey: "AIzaSyDkuYC730mqdYTXDy9PSf2EJHhwrGw4fiI",
-      authDomain: "carreras-de-autos-multij-84b19.firebaseapp.com",
-      databaseURL: "https://carreras-de-autos-multij-84b19-default-rtdb.firebaseio.com",
-      projectId: "carreras-de-autos-multij-84b19",
-      storageBucket: "carreras-de-autos-multij-84b19.appspot.com",
-      messagingSenderId: "157524603064",
-      appId: "1:157524603064:web:a7468be62be0deac64044d"
-    };
-      // Inicia Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+  apiKey: "AIzaSyDkuYC730mqdYTXDy9PSf2EJHhwrGw4fiI",
+  authDomain: "carreras-de-autos-multij-84b19.firebaseapp.com",
+  databaseURL: "https://carreras-de-autos-multij-84b19-default-rtdb.firebaseio.com",
+  projectId: "carreras-de-autos-multij-84b19",
+  storageBucket: "carreras-de-autos-multij-84b19.appspot.com",
+  messagingSenderId: "157524603064",
+  appId: "1:157524603064:web:a7468be62be0deac64044d"
+};
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </head>
-<!-- Cuerpo: donde se agrega todo el contenido de la página-->  
   <body>
     <script src="./js/Game.js"></script>
     <script src="./js/Form.js"></script>
